@@ -1,4 +1,5 @@
 v0.11
+	* FIX : keyboard modifiers: ctrl-click toggle; shift-click add; ctrl-add-click prevents road selection; shift-drag selects features which intersects
 	* ADD : Information dock
 	* ADD : Dock menu / shortcuts
 	* ADD : different colors for focus and hover
